--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                 <div class="details">
                                     <h3 class="name" data-magnetic data-cursor="-opaque"> Abdhul <span>Hakeem</span>
                                     </h3>
-                                    <h2>I am a <span> web develoer</span></h2>
+                                    <h2>I am a <span> web developer</span></h2>
                                     <p class="job">I am a 100% competent IT expert with over three years experience with HTML, JavaScript, PHP, Laravel and WordPress.</p>
                                     <div class="social">
                                         <ul>
